# ai-chatbot-saas

./: .env.example  AI_CHAT_NOW_WORKING.md  AI_MODELS_REFERENCE.md  AUTH_IMPLEMENTATION_COMPLETE.md  BUILD_SUCCESS.md  BUILD_TO_100_PROGRESS.md  CHATBOT_UPDATE_FIX.md  COMPLETE_CRUD_AI_PLAN.md  COMPLETE_UI_FEATURES_DONE.md  CONNECT_ALL_DASHBOARD_REAL_DATA.md  CRUD_COMPLETE_AUDIT.md  CRUD_SECURITY_COMPLETE.md  DYNAMIC_MODEL_AND_CONVERSATIONS.md  FINAL_COMPLETE_GUIDE.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS.md  FIX_ALL_ERRORS_GUIDE.md  GEMINI_API_SETUP.md  GEMINI_RATE_LIMITS.md  GET_SUPABASE_KEYS.md  GOOGLE_OAUTH_SETUP.md  HOW_TO_RUN_MIGRATION.md  IMPLEMENTATION_GUIDE_TRUE_100.md  INSTALLATION.md  OAUTH_SETUP_GUIDE.md  PUSH_TO_GITHUB.md  QUICK_AUTH_SETUP.md  QUICK_FIX_GOOGLE_OAUTH.md  QUICK_FIX_RLS.sql  RUN_DATABASE_SETUP.md  SETUP_OAUTH_SIMPLE.md  SUPABASE_AUTH_SETUP.md  TRUE_100_PERCENT_COMPLETE.md  TRUE_100_PERCENT_SAAS_ROADMAP.md  UI_100_PERCENT_ROADMAP.md  USER_ISOLATION_COMPLETE.md  USE_CASES.md
privasimu/: .env.docker.example  ANALYSIS_REPORT.md  BEYOND_CRUD_ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  Draft Development.md  ENTERPRISE_EXPANSION_ROAMAP.md  FLOW_CONSENT_BREACH.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  PERTAMINA_COMPARISON.md  PERTAMINA_PHASES.md  PLATFORM_ARCHITECTURE.md  PROGRESS_TRACKER.md  REVISION_PLAN.md  docker-compose.yml  fix_formal.js  fix_formal_text.js  fix_unicode.js  pdf-text.txt
privasimu/sdk/python/: README.md  privasimu_license.py  pyproject.toml
src/: middleware.ts
supabase/: ADD_MAX_TOKENS.sql  DEBUG_CHATBOT_ISSUE.sql  (+12 more)
(+147 files in other folders)
